<resources>
    <string name="app_name">VuHoangNam_20H1120232_HotelBooking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="select_images">Chọn hình ảnh mô tả cho khách sạn của bạn</string>
    <string name="hotel_address">Địa chỉ khách sạn</string>
    <string name="hotel_name">Tên khách sạn</string>
    <string name="amenities">Các tiện ích</string>
    <string name="pool">Bể bơi</string>
    <string name="wifi">Wifi</string>
    <string name="delete">Xóa</string>
</resources>